# learn-crewai

./: pyproject.toml  requirements.txt
agents/: agent.py
crewai_financial_analyst/: .env  main.py  requirements.txt
crewai_financial_analyst/config/: tasks.yaml
crewai_freelance_search/config/: agents.yaml
crewai_meeting_pr/: main.py
crewai_meeting_pr/tasks/: task.py
crewai_software_engineer_workflow/: .env  crew.py  main.py  prd-document.docx  requirements.txt
crewai_software_engineer_workflow/config/: agents.yaml  tasks.yaml
crewai_software_engineer_workflow/tools/: document_reader.py
tasks/: research_task.py
tools/: ExaTool.py
