[tool.poetry]
name = "crewai_financial_analyst"
version = "0.1.0"
description = ""
authors = ["kucira <kucira@mail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}
langchain-groq = "^0.1.3"
python-dotenv = "1.0.0"

[tool.poetry.scripts]
crewai_financial_analyst = "crewai_financial_analyst.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"